# python-project-template

./: README.md  pyproject.toml
mypypackage/: __init__.py  main.py
tests/: test_hello.py
